@@ -23,17 +23,23 @@ dependencies {
   // optional: if we want to use the clustered management layer
   compileOnly project(':clustered:client')
   compileOnly "org.terracotta:entity-client-api:$parent.entityApiVersion"
-  compileOnly "org.terracotta.management.dist:management-client:$parent.managementVersion"
+  compileOnly "org.terracotta.management.dist:mnm-nms-agent:$parent.managementVersion"
 
-  compile project(':api')
-  compile project(':core')
-  compile project(':impl')
-  compile ("org.terracotta.management:management-registry:$parent.managementVersion") {
+  compileOnly project(':api')
+  compileOnly project(':core')
+  compileOnly project(':impl')
+  testCompile ("org.terracotta.management:management-registry:$parent.managementVersion") {
     exclude group: 'org.terracotta', module: 'statistics'
   }
 
   testCompile project(':xml')
   testCompile "com.fasterxml.jackson.core:jackson-databind:2.7.5"
+}
+
+test {
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
 }
 
 tasks.withType(JavaCompile) {
